--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_nav_graph"
     app:startDestination="@id/breakingNewsFragment">
 
     <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.example.mvvmnewsapp.ui.fragments.BreakingNewsFragment"
-        android:label="BreakingNewsFragment" >
+        android:label="BreakingNewsFragment"
+        tools:layout="@layout/fragment_breaking_news"
+        >
         <action
             android:id="@+id/action_breakingNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
@@ -19,7 +22,8 @@
     <fragment
         android:id="@+id/savedNewsFragment"
         android:name="com.example.mvvmnewsapp.ui.fragments.SavedNewsFragment"
-        android:label="SavedNewsFragment" >
+        android:label="SavedNewsFragment"
+        tools:layout="@layout/fragment_saved_news">
         <action
             android:id="@+id/action_savedNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
@@ -31,7 +35,8 @@
     <fragment
         android:id="@+id/articleNewsFragment"
         android:name="com.example.mvvmnewsapp.ui.fragments.ArticleNewsFragment"
-        android:label="ArticleNewsFragment" >
+        android:label="ArticleNewsFragment"
+        tools:layout="@layout/fragment_article">
         <argument
             android:name="article"
             app:argType="com.example.mvvmnewsapp.models.Article" />
@@ -39,7 +44,8 @@
     <fragment
         android:id="@+id/searchNewsFragment"
         android:name="com.example.mvvmnewsapp.ui.fragments.SearchNewsFragment"
-        android:label="SearchNewsFragment" >
+        android:label="SearchNewsFragment"
+        tools:layout="@layout/fragment_search_news">
         <action
             android:id="@+id/action_searchNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
